--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- 
+  "type":"module",
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   }
 }
