--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-PORT=3000
-HOST='localhost'
-USER='root'
-PASSWORD='your pass'
-DATABASE='test1'
+HOST=localhost
+USER=root  
+PASSWORD=root@123
+DATABASE=seed_test_db
+JWT_SECRET=your_jwt_secret
+FRONTEND_URL=http://localhost:3000
