--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST=localhost
 USER=root  
 PASSWORD=root@123
-DATABASE=seed_test_db
-JWT_SECRET=your_jwt_secret
+DATABASE=SEED
+JWT_SECRET=super_secret_key_123!@abcXYZ
 FRONTEND_URL=http://localhost:3000
